# colabapi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
colabapi/: __init__.py  __main__.py  _colab_shim.py  _winshim.py  cli.py  colabcli.py  config.py  daemonctl.py  gauges.py  gui.py  keepalive.py  localpty.py  monitor.py  persist.py  platform.py  procutil.py  runtime.py  service.py  shellview.py  terminal.py  termview.py  timing.py  ui.py  winreg_install.py
docs/: RELEASING.md
scripts/: install.ps1  install.sh
systemd/: colabapi.service
tests/: test_close_semantics.py  test_e2e_console.py  test_reconnect.py  test_windows_compat.py  test_windows_console.py  test_windows_encoding.py  test_winreg_uninstall.py
