[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colabapi"
version = "0.2.1"
description = "Run and keep a Google Colab runtime alive, then reach its terminal from your own server, laptop, or Windows PC. A CLI for headless, persistent Colab sessions -- with Windows support the official CLI does not have."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "lil-limbo" }]
keywords = [
  "google colab",
  "colab",
  "colab terminal",
  "colab ssh",
  "colab cli",
  "colab windows",
  "persistent colab",
  "colab keep alive",
  "headless colab",
  "colab runtime",
  "jupyter",
  "gpu",
  "remote terminal",
  "vps",
  "powershell",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Distributed Computing",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  # Used directly by colabapi/terminal.py (the resilient console). It is also a
  # transitive dependency of google-colab-cli, but relying on a transitive dep
  # for a direct import is how installs break the day upstream drops it.
  "websocket-client>=1.8",
  # Google's official Colab CLI. Pulled in automatically so a single
  # `pipx install colabapi` installs the whole system, so the user never has to
  # install this separately. colabapi locates its `colab` binary inside its own
  # environment (see colabapi/colabcli.py), since pipx does not put dependency
  # console scripts on PATH.
  "google-colab-cli>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/lil-limbo/colabapi"
Repository = "https://github.com/lil-limbo/colabapi"
Issues = "https://github.com/lil-limbo/colabapi/issues"

[project.scripts]
colabapi = "colabapi.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["colabapi*"]

[tool.setuptools.package-data]
# The logo ships inside the package: the Tk window icon, the Windows
# DisplayIcon, and the Start-menu shortcut all load it via importlib.resources.
colabapi = ["assets/*"]
